주문 수신 관련 수정

--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -47,7 +47,7 @@ Copyright © HatioLab Inc. All rights reserved.
     </things-ajax>
 
     <!-- 수신 주문 취소 ajax -->
-    <things-ajax id="cancel-batch-ajax" resource-url="job_batch/:id/cancel_batch" resource-action="delete">
+    <things-ajax id="cancel-batch-ajax" resource-url="job_batches/:id/cancel_batch" resource-action="delete">
     </things-ajax>
 
     <!-- 주문 수신 시작 ajax -->
