주문 수신 팝업 스킵 아이템 정상 처리 표시
1

--- a/app/elements/logis/receive-order-popup.html
+++ b/app/elements/logis/receive-order-popup.html
@@ -233,8 +233,8 @@ Copyright © HatioLab Inc. All rights reserved.
                   foreground: '#494f48'
                }
             }, {
-               // '취소' 상태에서 녹색 ( Skip )
-               expression: "values['status'] == 'C'",
+               // '스킵' 상태에서 녹색 ( Skip )
+               expression: "values['status'] == 'S'",
                styles: {
                   background: '#e5ffe2',
                   foreground: '#494f48'
